  * colorkey support for drawing OSD (XVideo only - fix some flickering)
  * avoid possible segfaults in cdda
  * libvcd updated to 0.7.20
  * libcdio updated to 0.68
  * build improvements - different source and build directory, translations
  * avoid deadlock with raw AC3 streams and visualization
  * fix 24 bpp RGB output - may affect some users of xshm and fb

xine-lib (1-rc3c)
  * fix the deadlock with non-seekable input plugins
  * guess codeset for OSD if nl_langinfo(CODESET) is missing or not working
  * new option - list of domains, where don't use proxy
  * fix possible crashes in front-ends that create and delete streams
  * send a message to the front-end when the audio device is busy
  * revert changes to the DVD plugin that made it impossible to play mounted
    DVDs
  * use xine network functions in CDDB lookups, fix connection timeout
  * preparing for future MinGW port
  * improved network buffer management policy.
  * asf/mmst/mmsh proper support for "media changing" command.
  * improve playback with separate subtitles, fix the seeking and a deadlock
  * DVD still menus fixed that were broken in rc3b
  * deadlocks with network buffer control fixed
  * DXR3's letterboxed overlay mode works with pan&scan material
  * DXR3: timestamp handling for NAV packets fixes the menu on the first
    DVD of "24" season 1
  * fixed audio sync method "resampling"

xine-lib (1-rc3b)
  * fix SDL plugin that was broken in rc3
  * updated libfaad 2.0 RC3 cvs (fix some raw aac problems, HE support)
  * Win32 Cygwin updates, using DirectX
  * new demuxer for Interchange File Format (IFF) supporting IFF-8SVX, IFF-16SV,
    IFF-ILBM, and IFF-ANIM (limited to opt5, opt7 and opt8 at the moment)
  * fixed problem with jumpy visualization especially on ogg files
  * dxr3: fix situation, where the initial menu on some DVDs would have
    the wrong aspect
  * major refinement of post plugin architecture fixes a lot of races